--- a/galaxy.yml
+++ b/galaxy.yml
@@ -43,7 +43,8 @@ tags:
 # L(specifiers,https://python-semanticversion.readthedocs.io/en/latest/#requirement-specification). Multiple version
 # range specifiers can be set and are separated by ','
 dependencies:
-  "community.general": ">=7.5.0"
+  "community.general": ">=8.3.0"
+  "ansible.posix": ">=1.5.4"
 
 # The URL of the originating SCM repository
 repository: https://github.com/roles-ansible/ansible_collection_users.git
