--- a/roles/user/defaults/main.yml
+++ b/roles/user/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # Create ansible user
 l3d_users_user__create_ansible: true
-l3d_users_user__ansible_user_state: 'present' | tenary absent, present
+l3d_users_user__ansible_user_state: 'present'
 
 # run simple versionscheck
 submodules_versioncheck: false
