--- a/roles/user/defaults/main.yml
+++ b/roles/user/defaults/main.yml
@@ -2,6 +2,7 @@
 # Create ansible user
 l3d_users_user__create_ansible: true
 l3d_users_user__ansible_user_state: 'present'
-
+l3d_users_user__set_ansible_ssh_keys: false
+l3d_users_user__ansible_ssh_keys: "{{ lookup('url', 'https://github.com/do1jlr.keys', split_lines=False) }}"
 # run simple versionscheck
 submodules_versioncheck: false
