--- a/roles/sshd/tasks/sshd_config.yml
+++ b/roles/sshd/tasks/sshd_config.yml
@@ -14,15 +14,15 @@
     msg: "SSH Version: {{ _sshd_version }}"
     verbosity: 1
 
-# - name: Create SSHD configuration
-#  become: true
-#  ansible.builtin.template:
-#    src: 'templates/sshd_config.j2'
-#    dest: '/etc/ssh/sshd_config'
-#    owner: 'root'
-#    group: 'root'
-#    mode: 'u=rw,g=r,o=r'
-#    validate: '/usr/sbin/sshd -t -f %s'
-#    backup: true
-#  notify:
-#    - 'systemctl restart sshd'
+- name: Create SSHD configuration
+  become: true
+  ansible.builtin.template:
+    src: 'templates/sshd_config.j2'
+    dest: '/etc/ssh/sshd_config'
+    owner: 'root'
+    group: 'root'
+    mode: 'u=rw,g=r,o=r'
+    validate: '/usr/sbin/sshd -t -f %s'
+    backup: true
+  notify:
+    - 'systemctl restart sshd'
