restart sshd if something changed

--- a/roles/sshd/tasks/packages.yml
+++ b/roles/sshd/tasks/packages.yml
@@ -13,3 +13,5 @@
     name: "{{ item }}"
     state: 'present'
   with_items: "{{ l3d_users__sshd_package }}"
+  notify:
+    - 'systemctl restart sshd'
