--- a/roles/user/tasks/pubkeys.yml
+++ b/roles/user/tasks/pubkeys.yml
@@ -2,11 +2,12 @@
 - name: Set SSH Public Keys for Users
   become: true
   ansible.posix.authorized_key:
-    user: "{{ item.name }}"
+    user: "{{ user.name }}"
     state: 'present'
-    key: "{{ item.pubkeys | default() }}"
+    key: "{{ user.pubkeys | default() }}"
     exclusive: true
   loop: "{{ _l3d_users__merged_users }}"
   loop_control:
-    label: "user: ['{{ item.name }}']"
-  when: item.state | default ('present') == 'present'
+    label: "user={{ user.name }}"
+    loop_var: user
+  when: user.state | default ('present') == 'present'
