Create Option to only manage SSHD config

--- a/roles/admin/tasks/users.yml
+++ b/roles/admin/tasks/users.yml
@@ -11,7 +11,7 @@
   loop_control:
     label: "user={{ user.name }}"
     loop_var: user
-  when: user.state | default ('present') == 'present' and  user.admin | default(false) | bool
+  when: user.state | default ('present') == 'present' and  user.admin | default(false) | bool and not user.only_sshd_config | default(false) | bool
 
 - name: Remove superpowers from Users
   become: true
