--- a/roles/dotfiles/defaults/main.yml
+++ b/roles/dotfiles/defaults/main.yml
@@ -15,6 +15,8 @@ l3d_users__default_users: []
 #    admin_commands: 'ALL'
 #    admin_nopassword: false
 #    admin_ansible_login: true
+#    bashrc:
+#      - '[[ $- == *i* ]] && eval $(keychain --eval --quiet id_ed25519)'
 #  - name: 'bob'
 #    state: 'present'
 #    shell: '/bin/zsh'
@@ -29,6 +31,31 @@ l3d_users__local_users: []
 #    pubkeys: "{{ lookup('url', 'https://github.com/do1jlr.keys', split_lines=False) }}"
 
 l3d_users__bashrc: true
+l3d_users__dotfiles__bash_completion_enabled: true
+l3d_users__dotfiles__aliases:
+  - {alias: "ls", command: "ls ", color: true}
+  - {alias: "grep", command: "grep", color: true}
+  - {alias: "ll", command: "ls -alF", color: false}
+  - {alias: "la", command: "ls -A", color: false}
+  - {alias: "l", command: "ls -CF", color: false}
+  - {alias: "lz", command: "ls -Z", color: false}
+  - {alias: "EDITOR", command: "/usr/bin/vim", color: false}
+  - {alias: "VISUAL", command: "/usr/bin/gedit", color: false}
+  - {alias: "gitsubpull", command: "git submodule foreach '(git checkout \\$(git symbolic-ref --short refs/remotes/origin/HEAD | sed 's@^origin/@@'); git pull)'", color: false}
+  - {alias: "pwgen", command: "/usr/bin/pwgen --num-passwords=3000 --numerals --capitalize --secure --no-vowels --ambiguous 95 1", color: false}
+  - {alias: "gdiff", command: "git diff --submodule=diff", color: false}
+dotfiles__additional_user_bashrc_lines: []
+
+l3d_users__bashrc_path: "$HOME/.local/bin:$HOME/bin:$HOME/.cargo/env:$PATH"
+
+# PS1 Prompt
+l3d_users__dotfiles__user_prompt: '\e]0; \u@\H <\A> \w\a\[\033[01;33m\] $(printf "\xE2\x9D\xA4") \[\033[01;32m\]\u\[\033[01;36m\]@\[\033[01;32m\]\H\[\033[01;34m\] <\A> \[\033[01;35m\] \j \[\033[01;36m\] \w \[\033[01;33m\]\n\[\033[01;33m\] $(git branch 2>/dev/null | sed -n "s/* \(.*\)/\1 /p")$\[\033[01;00m\]'
+l3d_users__dotfiles__root_prompt: '\e]0; \u@\H <\A> \w\a\[\033[01;31m\] $(printf "\xE2\x9D\xA4") \[\033[01;32m\]\u\[\033[01;36m\]@\[\033[01;32m\]\H\[\033[01;34m\] <\A> \[\033[01;35m\] \j \[\033[01;36m\] \w \[\033[01;33m\]\n\[\033[01;33m\] $(git branch 2>/dev/null | sed -n "s/* \(.*\)/\1 /p")$\[\033[01;00m\]'
+
+# bash_history
+l3d_users__dotfiles__history_control: 'ignoreboth'
+l3d_users__dotfiles__history_size: '-1'
+l3d_users__dotfiles__history_file_size: '-1'
 
 # run simple versionscheck
 submodules_versioncheck: false
