--- a/roles/dotfiles/defaults/main.yml
+++ b/roles/dotfiles/defaults/main.yml
@@ -60,5 +60,8 @@ l3d_users__dotfiles__history_file_size: '-1'
 # vim config
 l3d_users__vimrc: true
 
+# tmux config
+l3d_users__tmuxcfg: true
+
 # run simple versionscheck
 submodules_versioncheck: false
