--- a/roles/dotfiles/vars/main.yml
+++ b/roles/dotfiles/vars/main.yml
@@ -3,6 +3,7 @@ l3d_users__dotfiles_packages:
   - bash
   - vim
   - htop
+  - tmux
 
-playbook_version_number: 5
+playbook_version_number: 6
 playbook_version_path: 'l3d.users.dotfiles.version'
