--- a/roles/dotfiles/tasks/bashrc.yml
+++ b/roles/dotfiles/tasks/bashrc.yml
@@ -6,6 +6,7 @@
     dest: '/etc/bash.bashrc'
     owner: 'root'
     group: 'root'
+    backup: true
     mode: 'u=rw,g=r,o=r'
 
 - name: Create bashrc configuration per user
@@ -16,8 +17,20 @@
     owner: "{{ user.name }}"
     group: "{{ user.name }}"
     mode: '0640'
+    backup: true
   loop: "{{ _l3d_users__merged_users }}"
   loop_control:
     label: "user={{ user.name }}"
     loop_var: user
+  when: user.state | default ('present') == 'present'
+
+- name: Create bashrc for root
+  become: true
+  ansible.builtin.template:
+    src: 'templates/dotbashrc.j2'
+    dest: "/root/.bashrc"
+    owner: 'root'
+    group: 'root'
+    mode: '0640'
+    backup: true
   when: user.state | default ('present') == 'present'
