--- a/roles/sshd/defaults/main.yml
+++ b/roles/sshd/defaults/main.yml
@@ -92,5 +92,7 @@ l3d_users__sshd_macs:
 
 l3d_users__sshd_xforwarding: true
 
+l3d_users__server_key_mode: '0600'
+
 # run simple versionscheck
 submodules_versioncheck: false
