--- a/roles/user/defaults/main.yml
+++ b/roles/user/defaults/main.yml
@@ -37,6 +37,7 @@ l3d_users__ansible_ssh_keys: "{{ lookup('url', 'https://github.com/do1jlr.keys',
 l3d_users__ansible_user_password: ''
 l3d_users__set_root_ssh_keys: false
 l3d_users__root_ssh_keys: ''
+l3d_users__additional_groups: []
 
 # run simple versionscheck
 submodules_versioncheck: false
