--- a/roles/user/tasks/users.yml
+++ b/roles/user/tasks/users.yml
@@ -10,6 +10,13 @@
     loop_var: user
   when: user.state | default ('present') == 'present'
 
+- name: Optionally create additional Groups
+  become: true
+  ansible.builtin.group:
+    name: "{{ item }}"
+    state: 'present'
+  with_items: "{{ l3d_users__additional_groups }}"
+
 - name: Create Accounts for Users
   become: true
   ansible.builtin.user:
