--- a/galaxy.yml
+++ b/galaxy.yml
@@ -9,7 +9,7 @@ namespace: l3d
 name: users
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.1.8
+version: 1.1.9
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -43,15 +43,15 @@ tags:
 # L(specifiers,https://python-semanticversion.readthedocs.io/en/latest/#requirement-specification). Multiple version
 # range specifiers can be set and are separated by ','
 dependencies:
-  "community.general": ">=9.4.0"
-  "ansible.posix": ">=1.5.4"
-  "community.crypto": ">=2.22.0"
+  "community.general": ">=9.5.0,<11.0.0"
+  "ansible.posix": ">=1.6.1,<2.0.0"
+  "community.crypto": ">=2.22.1,<3.0.0"
 
 # The URL of the originating SCM repository
 repository: https://github.com/roles-ansible/ansible_collection_users.git
 
 # The URL to the homepage of the collection/project
-homepage: https://ansible.l3d.space/
+homepage: https://ansible.l3d.space/#l3d.users
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
