--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,8 @@
 ---
 collections:
   - name: "community.general"
-    version: ">=9.4.0"
+    version: ">=9.5.0,<11.0.0"
   - name: "ansible.posix"
-    version: ">=1.5.4"
+    version: ">=1.6.1,<2.0.0"
   - name: "community.crypto"
-    version: ">=2.22.0"
+    version: ">=2.22.1,<3.0.0"
