--- a/roles/user/tasks/users.yml
+++ b/roles/user/tasks/users.yml
@@ -13,8 +13,10 @@
 - name: Optionally create additional Groups
   become: true
   ansible.builtin.group:
-    name: "{{ item }}"
-    state: 'present'
+    name: "{{ item.name is defined | ternary(item.name, item) }}"
+    gid: "{{ item.gid | default(omit) }}"
+    system: "{{ item.system | default(false) }}"
+    state: "{{ item.state | default('present') }}"
   with_items: "{{ l3d_users__additional_groups }}"
 
 - name: Create Accounts for Users
