--- a/roles/admin/tasks/users.yml
+++ b/roles/admin/tasks/users.yml
@@ -6,6 +6,7 @@
     user: "{{ user.name }}"
     state: 'present'
     commands: "{{ user.admin_commands | default('ALL') }}"
+    runas: "{{ user.admin_runas | default(omit) }}"
     nopassword: "{{ user.admin_nopassword | default(false) }}"
   loop: "{{ _l3d_users__merged_users }}"
   loop_control:
