fix: correct root ssh key task to use user root instead of ansible
Signed-off-by: Daniil <116022124+TheMelbine@users.noreply.github.com>

--- a/roles/user/tasks/root_ssh.yml
+++ b/roles/user/tasks/root_ssh.yml
@@ -2,7 +2,7 @@
 - name: Set dedicated SSH keys root and drop all other keys
   become: true
   ansible.posix.authorized_key:
-    user: 'ansible'
+    user: 'root'
     state: 'present'
     key: "{{ l3d_users__root_ssh_keys }}"
     exclusive: true
